--- a/src/assets/css/header.scss
+++ b/src/assets/css/header.scss
@@ -33,13 +33,22 @@
     }
   }
 }
+.header__sticky {
+  position: fixed !important;
+  top: 0 !important;
+}
 .header {
   width: 100%;
   height: 60px;
-  background: #2d4e9d;
+  background: transparent;
   color: white;
-  position: sticky;
-  top: 0;
+  position: absolute;
+  z-index: 99;
+  top: 40px;
+  @media (max-width: 768px) {
+    position: fixed;
+    top: 0;
+  }
   &__container {
     height: 100%;
     display: flex;
@@ -103,6 +112,7 @@
             .li__lang {
               position: absolute;
               top: 100%;
+              right: 0;
               display: block;
             }
           }
@@ -115,22 +125,23 @@
       }
     }
     &__logo {
-      width: 43px;
-      height: 40px;
+      width: 54px;
+      height: 50px;
+      margin-top: 10px;
       img {
         object-fit: cover;
         object-position: center;
         width: 100%;
-        width: 43px;
-        height: 40px;
+        width: 54px;
+        height: 50px;
       }
     }
   }
 }
 .menudrawer {
   background: #2d4e9d;
-  padding-top: 8px;
-  height: 100vh;
+  padding-top: 68px;
+  height: 497px;
   &__container {
     &__upper {
       color: white;
