--- a/src/assets/css/home.scss
+++ b/src/assets/css/home.scss
@@ -1,3 +1,151 @@
 .home {
-  height: 200vh;
+  &__cover {
+    width: 100%;
+    margin-bottom: 60px;
+    position: relative;
+    .slick-list {
+      height: 100%;
+    }
+    .slick-slide :first-child {
+      height: 100%;
+    }
+    .slick-track {
+      height: 100%;
+    }
+    @media (max-width: 768px) {
+      height: 497px;
+    }
+    img {
+      width: 100%;
+      height: 100%;
+      object-position: center;
+      object-fit: cover;
+      @media (max-width: 768px) {
+        object-position: 55% 50%;
+      }
+    }
+    &__content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      text-align: center;
+      @media (max-width: 768px) {
+        width: 20%;
+      }
+      &__title {
+        font-family: "Merriweather";
+        font-style: normal;
+        font-weight: 700;
+        font-size: 50px;
+        text-transform: capitalize;
+        margin-bottom: 12px;
+        @media (max-width: 992px) {
+          font-size: 22px;
+        }
+      }
+      &__intro {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 22px;
+        line-height: 160%;
+        margin-bottom: 32px;
+        @media (max-width: 992px) {
+          font-size: 16px;
+        }
+      }
+      &__button {
+        width: 160px;
+        height: 42px;
+        border: 2px solid #c5ac52;
+        background: transparent;
+        color: #c5ac52;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        transition: 300ms ease;
+        &:hover {
+          background: #c5ac52;
+          color: white;
+        }
+      }
+    }
+  }
+  &__container {
+    &__about__row {
+      margin-bottom: 100px;
+      padding: 24px 48px;
+      background: #fbfbfb;
+      border: 2px solid #be9140;
+      @media (max-width: 768px) {
+        flex-direction: column-reverse;
+        padding: 24px 12px;
+      }
+      &__logo {
+        padding: 0;
+        height: max-content;
+        display: flex;
+        justify-content: end;
+        @media (max-width: 768px) {
+          width: 100%;
+          justify-content: center;
+        }
+        img {
+          object-fit: contain;
+          object-position: center;
+        }
+      }
+      &__left {
+        padding: 0;
+        @media (max-width: 768px) {
+          width: 100%;
+        }
+      }
+      &__title {
+        font-family: "Merriweather";
+        font-style: normal;
+        font-weight: 700;
+        font-size: 22px;
+        color: #be9140;
+        margin-bottom: 12px;
+        @media (max-width: 768px) {
+          text-align: center;
+          margin-top: 24px;
+        }
+      }
+      &__info {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        margin-bottom: 28px;
+        text-align: justify;
+        @media (max-width: 768px) {
+          text-align: center;
+          font-size: 14px;
+        }
+      }
+      &__button {
+        border: none;
+        font-style: normal;
+        font-weight: 500;
+        text-transform: capitalize;
+        font-size: 16px;
+        color: #c5ac52;
+        background: transparent;
+
+        &:hover {
+          img {
+            transform: rotateX(200deg);
+          }
+        }
+        &__span {
+          margin-right: 5px;
+          img {
+            transition: 200ms ease-in !important;
+          }
+        }
+      }
+    }
+  }
 }
