--- a/src/assets/css/home.scss
+++ b/src/assets/css/home.scss
@@ -3,12 +3,14 @@
     width: 100%;
     margin-bottom: 60px;
     position: relative;
+
     .slick-list {
       height: 100%;
     }
     .slick-slide :first-child {
       height: 100%;
     }
+
     .slick-track {
       height: 100%;
     }
@@ -27,12 +29,15 @@
     &__content {
       position: absolute;
       top: 50%;
+      z-index: 9;
       left: 50%;
+
       transform: translate(-50%, -50%);
       color: white;
       text-align: center;
       @media (max-width: 768px) {
-        width: 20%;
+        width: 100%;
+        padding: 0 16px;
       }
       &__title {
         font-family: "Merriweather";
@@ -74,13 +79,17 @@
   }
   &__container {
     &__about__row {
-      margin-bottom: 100px;
+      margin-bottom: 60px;
       padding: 24px 48px;
       background: #fbfbfb;
       border: 2px solid #be9140;
+
       @media (max-width: 768px) {
         flex-direction: column-reverse;
         padding: 24px 12px;
+      }
+      @media (max-width: 992px) {
+        padding: 24px 24px;
       }
       &__logo {
         padding: 0;
@@ -91,6 +100,7 @@
           width: 100%;
           justify-content: center;
         }
+
         img {
           object-fit: contain;
           object-position: center;
@@ -146,6 +156,36 @@
           }
         }
       }
+    }
+  }
+  .team {
+    text-align: center;
+    &__slider {
+      display: flex;
+      justify-content: space-between;
+      &__card {
+        width: 282px;
+        height: 402px;
+        background: #fbfbfb;
+        border: 2px solid #be9140;
+      }
+    }
+
+    &__title {
+      font-family: "Merriweather";
+      font-style: normal;
+      font-weight: 700;
+      font-size: 22px;
+      color: #be9140;
+      text-transform: capitalize;
+      margin-bottom: 8px;
+    }
+    &__intro {
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      color: #474747;
+      text-transform: capitalize;
     }
   }
 }
