--- a/src/assets/css/home.scss
+++ b/src/assets/css/home.scss
@@ -160,14 +160,41 @@
   }
   .team {
     text-align: center;
+    margin-bottom: 200px;
     &__slider {
       display: flex;
       justify-content: space-between;
       &__card {
-        width: 282px;
         height: 402px;
+        width: 282px !important;
         background: #fbfbfb;
         border: 2px solid #be9140;
+
+        &:hover {
+          img {
+            transform: scale(1.2);
+          }
+        }
+        &__image {
+          height: 334px;
+          overflow: hidden;
+          img {
+            transition: 200ms ease;
+
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+          }
+        }
+        &__name {
+          margin-top: 21px;
+          font-family: "Merriweather";
+          font-style: normal;
+          font-weight: 700;
+          font-size: 18px;
+          text-transform: capitalize;
+        }
       }
     }
 
