--- a/src/assets/css/advocatecard.scss
+++ b/src/assets/css/advocatecard.scss
@@ -2,22 +2,39 @@
   justify-content: space-between;
   margin: 60px 0;
   padding: 0;
+  text-align: center;
+  .team__links {
+    text-decoration: none;
+    color: #474747;
+  }
+  @media (max-width: 768px) {
+    width: 100%;
+    justify-content: center;
+  }
 }
 .advocatecard__slider__card {
+  padding: 0;
   height: 402px;
   width: 282px !important;
   background: #fbfbfb;
   border: 2px solid #be9140;
   margin-bottom: 16px;
   justify-content: space-between;
+
+  @media (max-width: 768px) {
+    width: 322px !important;
+  }
   &:hover {
-    img {
-      transform: scale(1.2);
+    .advocatecard__slider__card__image {
+      padding: 0;
     }
   }
+
   &__image {
+    transition: 200ms;
     height: 334px;
     overflow: hidden;
+    padding: 12px 12px 0 12px;
     img {
       transition: 200ms ease;
 
