--- a/src/assets/css/header.scss
+++ b/src/assets/css/header.scss
@@ -60,10 +60,10 @@
   z-index: 99;
   top: 40px;
 
-  @media (max-width: 768px) {
-    position: fixed;
-    top: 0;
-  }
+  // @media (max-width: 768px) {
+  //   position: fixed;
+  //   top: 0;
+  // }
   &__container {
     height: 100%;
     display: flex;
