--- a/src/assets/css/advocatecard.scss
+++ b/src/assets/css/advocatecard.scss
@@ -27,6 +27,10 @@
   &:hover {
     .advocatecard__slider__card__image {
       padding: 0;
+      &__ul {
+        opacity: 1;
+        visibility: visible;
+      }
     }
   }
 
@@ -35,6 +39,45 @@
     height: 334px;
     overflow: hidden;
     padding: 12px 12px 0 12px;
+    position: relative;
+
+    &__ul {
+      position: absolute;
+      bottom: 0;
+      padding-left: 16px;
+      transition: 200ms ease;
+      opacity: 0;
+      visibility: hidden;
+      li {
+        font-family: "Poppins";
+
+        list-style: none;
+        text-align: start;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        color: #fff;
+        img {
+          width: 20px;
+          object-fit: contain;
+          margin-right: 12px;
+        }
+      }
+    }
+    &:hover {
+      &::after {
+        background: #2d4f9d40;
+      }
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      transition: 200ms ease;
+    }
     img {
       transition: 200ms ease;
 
