--- a/src/assets/css/Contact.scss
+++ b/src/assets/css/Contact.scss
@@ -1,21 +1,44 @@
 .contact {
-    margin-top: 60px;
-
-    &__ {
+    margin: 60px 0;
+    
+    &__container {
         display: flex;
-        .map{
-                border: 4px solid #BE9140;
+
+        &__row {
+            @media (max-width: 768px) {
+                flex-direction: column-reverse;
+
+                .name,
+                .email,
+                .tel {
+                    input {
+                        width: 100%;
+                        align-items: center;
+                    }
+                }
+            }
         }
 
-        .text{
+        .map {
+            border: 4px solid #be9140;
+            padding: 0;
+
+            iframe {
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        .text {
             h4 {
-                color: #BE9140;
+                color: #be9140;
                 font-weight: 700;
+                font-family: "Merriweather";
                 font-size: 22px;
                 line-height: 38.5px;
             }
-    
-            p{
+
+            p {
                 width: 558px;
                 height: 52px;
                 font-style: normal;
@@ -28,99 +51,134 @@
         }
 
         .right {
-            margin-left: 14px;
-            .form{
+            .form {
                 display: flex;
                 justify-content: space-around;
-                .name {
-                    display: flex;
-                    flex-direction: column;
-    
-                    input {
-                        width: 282px;
-                        height: 44px;
-                        padding: 9px 54px 9px 16px;
-                        background-color: #fbfbfb;
-                        margin: 8px 24px 20px 0;
-                        border: 1px solid #a3a3a3;
+
+                .col-lg-6 {
+                    margin: 0 0 20px 0;
+
+                    label {
+                        margin-bottom: 8px;
+                        line-height: 24.5px;
+                        font-family: "Merriweather";
+                        font-weight: 700;
+                        font-size: 14px;
+                        color: #474747;
                     }
-    
                 }
-    
+
+                .name,
+                .email,
                 .tel {
                     display: flex;
                     flex-direction: column;
-    
+
                     input {
                         width: 282px;
                         height: 44px;
                         padding: 9px 54px 9px 16px;
                         background-color: #fbfbfb;
-                        margin: 8px 0 20px 0;
                         border: 1px solid #a3a3a3;
+                        outline: none;
+                        &:focus{
+                            border: 2px solid #be9140;
+                        }
                     }
-    
                 }
-    
-                .email {
-                    display: flex;
-                    flex-direction: column;
-    
-                    input {
-                        width: 282px;
-                        height: 44px;
-                        padding: 9px 54px 9px 16px;
-                        background-color: #fbfbfb;
-                        margin: 8px 24px 53px 0;
-                        border: 1px solid #a3a3a3;
-                    }
-    
-                }
-    
+
                 .select {
                     display: flex;
                     flex-direction: column;
-    
+
                     select {
+                        border: 1px solid #be9140;
                         width: 282px;
                         height: 44px;
                         padding: 9px 98px 9px 16px;
                         background-color: #fbfbfb;
-                        color: #474747; 
-                        margin: 8px 0 53px 0;
+                        color: #474747;
                         border: 1px solid #a3a3a3;
+                        outline: none;
+                        &:focus{
+                            border: 2px solid #be9140;
+                        }
                     }
                 }
 
-                .area{
+                .area {
                     display: flex;
                     flex-direction: column;
-                    textarea{
-                        box-sizing: border-box;
+
+                    label {
+                        font-weight: 700;
+                        line-height: 24.5px;
+                        font-family: "Merriweather";
+                        font-style: normal;
+                        font-size: 14px;
+                        color: #474747;
+                    }
+
+                    textarea {
                         width: 588px;
                         height: 139px;
                         background-color: #fbfbfb;
                         border: 1px solid #a3a3a3;
                         padding: 8px 380px 105px 16px;
                         margin-top: 8px;
+                        outline: none;
+                        &:focus{
+                            border: 2px solid #be9140;
+                        }
                     }
                 }
             }
         }
-        .area-btn{
-            width: 100%;
-            background-color: red;
-            display: flex;
-            justify-content: end;
-            padding: 0;
-            button{
-                background-color: #C5AC52;
+    }
+
+    .bottom-section {
+        margin-top: 32px;
+
+        h5 {
+            width: 140px;
+            height: 28px;
+            font-weight: 700;
+            line-height: 28px;
+            color: #be9140;
+            font-size: 16px;
+            font-family: "Merriweather";
+            margin: 0;
+        }
+
+        h6{
+            color: #474747;
+            font-weight: 400;
+            font-style: 16px;
+            line-height: 25.6px;
+        }
+
+        button {
+            background-color: #c5ac52;
             color: #fff;
             width: 180px;
             height: 50px;
             padding: 12px, 24px, 12px, 24px;
-            // margin: 32px 40px 0 0;
+            border: none;
+            transition: background-color 0.5s ease;
+            &:hover{
+                background-color: #B9801A;
             }
+        }
+
+        img {
+            width: 32px;
+            height: 32px;
+            margin-right: 16px;
+        }
+
+        .time,
+        .unvan {
+            margin-bottom: 24px;
         }
     }
 }
