conect to backend

--- a/src/assets/css/services.scss
+++ b/src/assets/css/services.scss
@@ -21,19 +21,21 @@ main {
         .custom-card {
           border: 2px solid #be9140;
           text-align: center;
-          height: 315px;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: space-around;
-          padding: 0 10px;
+          height: 313px;
+          // display: flex;
+          // flex-direction: column;
+          // align-items: center;
+          // justify-content: space-evenly;
+          padding: 0 18px;
           cursor: pointer;
           transition: 200ms all ease-in;
           img {
             width: 70px;
             height: 70px;
+            margin: 48px auto 0;
           }
           h5 {
+            margin: 24px auto 0;
             font-weight: 700;
             font-size: 18px;
             line-height: 28.8px;
@@ -42,6 +44,7 @@ main {
             transition: 200ms all ease-in;
           }
           p {
+            margin: 8px auto 0;
             font-weight: 400;
             font-size: 16px;
             line-height: 25.6px;
