--- a/src/assets/css/Contact.scss
+++ b/src/assets/css/Contact.scss
@@ -1,184 +1,157 @@
-.contact {
-    margin: 60px 0;
-    
-    &__container {
-        display: flex;
-
-        &__row {
-            @media (max-width: 768px) {
-                flex-direction: column-reverse;
-
-                .name,
-                .email,
-                .tel {
-                    input {
-                        width: 100%;
-                        align-items: center;
-                    }
-                }
-            }
-        }
-
+.wrapper {
+  padding: 60px 0;
+  .container {
+    & > .row {
+      & > .info {
         .map {
+          width: 100%;
+          iframe {
+            width: 100%;
+            height: 450px;
             border: 4px solid #be9140;
-            padding: 0;
-
-            iframe {
-                width: 100%;
-                height: 100%;
-            }
+          }
         }
-
-        .text {
-            h4 {
-                color: #be9140;
-                font-weight: 700;
-                font-family: "Merriweather";
-                font-size: 22px;
-                line-height: 38.5px;
+        & > .contact-info {
+          & > .row {
+            & > .col-lg-6 {
+              margin: 24px 0;
+              display: flex;
+              img {
+                width: 32px;
+                height: 32px;
+              }
+              & > div {
+                padding: 0 0 0 17px;
+                h5 {
+                  font-weight: 700;
+                  font-family: "Merriweather";
+                  font-size: 16px;
+                  color: #be9140;
+                  margin: 0;
+                }
+                p {
+                  font-weight: 400;
+                  font-size: 16px;
+                  font-family: "Poppins";
+                  color: #474747;
+                  margin: 0;
+                }
+              }
             }
-
-            p {
-                width: 558px;
-                height: 52px;
-                font-style: normal;
-                font-weight: 400;
-                font-size: 16px;
-                line-height: 25.6px;
-                color: #474747;
-                margin: 12px 0 24px 0;
-            }
+          }
         }
-
-        .right {
-            .form {
+        @media (max-width: 991px) {
+          display: flex;
+          flex-direction: column-reverse;
+        }
+      }
+      .form {
+        h4 {
+          color: #be9140;
+          font-weight: 700;
+          font-family: "Merriweather";
+          font-size: 22px;
+        }
+        p {
+          font-family: "Poppins";
+          font-weight: 400;
+          font-size: 16px;
+          color: #474747;
+        }
+        form {
+          height: 100%;
+          & > .row {
+            & > div {
+              & > div {
                 display: flex;
-                justify-content: space-around;
-
-                .col-lg-6 {
-                    margin: 0 0 20px 0;
-
-                    label {
-                        margin-bottom: 8px;
-                        line-height: 24.5px;
-                        font-family: "Merriweather";
-                        font-weight: 700;
-                        font-size: 14px;
-                        color: #474747;
-                    }
+                flex-direction: column;
+                & > label {
+                  font-size: 14px;
+                  font-weight: 700;
+                  font-family: "Merriweather";
+                  color: #474747;
+                  margin-top: 20px;
                 }
-
-                .name,
-                .email,
-                .tel {
-                    display: flex;
-                    flex-direction: column;
-
-                    input {
-                        width: 282px;
-                        height: 44px;
-                        padding: 9px 54px 9px 16px;
-                        background-color: #fbfbfb;
-                        border: 1px solid #a3a3a3;
-                        outline: none;
-                        &:focus{
-                            border: 2px solid #be9140;
-                        }
-                    }
+                & > input {
+                  border: 1px solid #a3a3a3;
+                  height: 44px;
+                  padding: 9px 0 9px 16px;
+                  margin-top: 8px;
+                  background-color: #fbfbfb;
+                  outline: none;
+                  transition: 200ms all ease-in;
+                  &::placeholder {
+                    font-size: 16px;
+                    font-weight: 400;
+                    color: #a3a3a3;
+                  }
+                  &:focus {
+                    border: 0;
+                    outline: 2px solid #c5ac52;
+                  }
                 }
-
-                .select {
-                    display: flex;
-                    flex-direction: column;
-
-                    select {
-                        border: 1px solid #be9140;
-                        width: 282px;
-                        height: 44px;
-                        padding: 9px 98px 9px 16px;
-                        background-color: #fbfbfb;
-                        color: #474747;
-                        border: 1px solid #a3a3a3;
-                        outline: none;
-                        &:focus{
-                            border: 2px solid #be9140;
-                        }
-                    }
+                & > select {
+                  border: 1px solid #a3a3a3;
+                  height: 44px;
+                  padding: 9px 0 9px 16px;
+                  margin-top: 8px;
+                  background-color: #fbfbfb;
+                  outline: none;
+                  font-size: 16px;
+                  font-weight: 400;
+                  color: #a3a3a3;
+                  &:focus {
+                    outline: 2px solid #c5ac52;
+                  }
+                  & > option {
+                    border: 1px solid #c5ac52;
+                  }
                 }
-
-                .area {
-                    display: flex;
-                    flex-direction: column;
-
-                    label {
-                        font-weight: 700;
-                        line-height: 24.5px;
-                        font-family: "Merriweather";
-                        font-style: normal;
-                        font-size: 14px;
-                        color: #474747;
-                    }
-
-                    textarea {
-                        width: 588px;
-                        height: 139px;
-                        background-color: #fbfbfb;
-                        border: 1px solid #a3a3a3;
-                        padding: 8px 380px 105px 16px;
-                        margin-top: 8px;
-                        outline: none;
-                        &:focus{
-                            border: 2px solid #be9140;
-                        }
-                    }
+                & > textarea {
+                  margin: 16px 0 0 0;
+                  padding: 8px 0 0 16px;
+                  outline: 0;
+                  transition: 200ms all ease-in;
+                  background-color: #fbfbfb;
+                  border: 1px solid #a3a3a3;
+                  height: 132px;
+                  &:focus {
+                    border: 0;
+                    outline: 2px solid #c5ac52;
+                  }
+                  &:active {
+                    border: 0;
+                    outline: 2px solid #c5ac52;
+                  }
                 }
+                & > button {
+                  margin: 32px 0 0 0;
+                  background-color: #c5ac52;
+                  border: 0;
+                  padding: 12px 60px;
+                  color: #fff;
+                  font-size: 16px;
+                  font-weight: 500;
+                  font-family: "Poppins";
+                }
+              }
             }
-        }
-    }
-
-    .bottom-section {
-        margin-top: 32px;
-
-        h5 {
-            width: 140px;
-            height: 28px;
-            font-weight: 700;
-            line-height: 28px;
-            color: #be9140;
-            font-size: 16px;
-            font-family: "Merriweather";
-            margin: 0;
-        }
-
-        h6{
-            color: #474747;
-            font-weight: 400;
-            font-style: 16px;
-            line-height: 25.6px;
-        }
-
-        button {
-            background-color: #c5ac52;
-            color: #fff;
-            width: 180px;
-            height: 50px;
-            padding: 12px, 24px, 12px, 24px;
-            border: none;
-            transition: background-color 0.5s ease;
-            &:hover{
-                background-color: #B9801A;
+            & > .button {
+              display: flex;
+              justify-content: end;
+              & > div {
+                @media (max-width: 991px) {
+                  width: 100%;
+                }
+              }
             }
+          }
         }
-
-        img {
-            width: 32px;
-            height: 32px;
-            margin-right: 16px;
-        }
-
-        .time,
-        .unvan {
-            margin-bottom: 24px;
-        }
+      }
+      @media (max-width: 991px) {
+        flex-direction: column-reverse;
+        gap: 20px;
+      }
     }
+  }
 }
