--- a/src/assets/css/servicedetail.scss
+++ b/src/assets/css/servicedetail.scss
@@ -46,10 +46,13 @@ main {
         .logo {
           width: 20%;
           height: 282px;
+          background-color: #fbfbfb;
+          padding: 0 10px;
           img {
             width: 100%;
             height: 100%;
             object-fit: contain;
+            filter: invert(100%);
           }
         }
         $breakpoint-tablet: 768px;
