--- a/src/admin/scss/_global.scss
+++ b/src/admin/scss/_global.scss
@@ -1,57 +1,57 @@
-@use './abstracts/' as *;
+// @use './abstracts/' as *;
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
+// * {
+//     padding: 0;
+//     margin: 0;
+//     box-sizing: border-box;
+// }
 
-html {
-    overflow-x: hidden;
-}
+// html {
+//     overflow-x: hidden;
+// }
 
-body {
-    font-family: $fontFamily;
-    color: $txtColor;
-    font-size: $fontSizeNormal;
-    line-height: 1.5;
-    background-color: $bodyBg;
-    overflow-x: hidden;
-}
+// body {
+//     font-family: $fontFamily;
+//     color: $txtColor;
+//     font-size: $fontSizeNormal;
+//     line-height: 1.5;
+//     background-color: $bodyBg;
+//     overflow-x: hidden;
+// }
 
-a {
-    text-decoration: none;
-    color: unset;
-}
+// a {
+//     text-decoration: none;
+//     color: unset;
+// }
 
-img {
-    width: 100%;
-}
+// img {
+//     width: 100%;
+// }
 
-ul,
-li {
-    list-style-type: none;
-}
+// ul,
+// li {
+//     list-style-type: none;
+// }
 
-.mb {
-    margin-bottom: $spacing;
+// .mb {
+//     margin-bottom: $spacing;
 
-    @include tablet {
-        margin-bottom: $mobileSpacing;
-    }
-}
+//     @include tablet {
+//         margin-bottom: $mobileSpacing;
+//     }
+// }
 
-.title {
-    font-size: $fontSizeMedium;
-    font-weight: 700;
-}
+// .title {
+//     font-size: $fontSizeMedium;
+//     font-weight: 700;
+// }
 
-.txt-success {
-    color: $green;
-}
+// .txt-success {
+//     color: $green;
+// }
 
-.txt-danger { 
-    color: $red;
-}
+// .txt-danger { 
+//     color: $red;
+// }
